# bird-alert

./: bird_monitor.py  design.py  pyproject.toml  schedule.sh
bird-alert/: pyproject.toml
bird-alert/bird_alert/: bird_alert.py
bird-alert/bird_alert/bird_api/: bird.py  bird_client.py
bird-alert/bird_alert/layout/: alerts.py  marquee.py
bird-alert/tests/: test_bird_alert.py
bird_alert/: bird_alert.py  bird_monitor.py  rgb_base.py  samplebase.py
bird_alert/bird_api/: bird.py  bird_client.py
bird_alert/layout/: alerts.py  bird_image.py  marquee.py
tests/: test_bird_alert.py
