[tool.poetry]
name = "bird-alert"
version = "0.1.0"
description = ""
authors = ["laurentbastien <laurent.corbeil@unity3d.com>"]

[tool.poetry.dependencies]
python = "^3.5"
ebird-api = "^3.0.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
